add mogo select package
